--- a/test/initialuser.yml
+++ b/test/initialuser.yml
@@ -5,5 +5,6 @@ Resources:
   UserPool:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
-      InitialUser: 'noreply@widdix.de'
+      Parameters:
+        InitialUser: 'noreply@widdix.de'
       TemplateURL: './node_modules/@cfn-modules/cognito-userpool/module.yml'
