one more time ...

--- a/module.yml
+++ b/module.yml
@@ -55,32 +55,6 @@ Resources:
         Value: !Ref InitialUser
       Username: !Ref InitialUser
       UserPoolId: !Ref UserPool
-  DomainPolicy:
-    Type: 'AWS::IAM::ManagedPolicy'
-    Properties:
-      PolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-        - Effect: Allow
-          Action:
-          - 'cognito-idp:CreateUserPoolDomain'
-          - 'cognito-idp:DeleteUserPoolDomain'
-          Resource: '*'
-  DomainFunction:
-    Type: 'AWS::CloudFormation::Stack'
-    Properties:
-      Parameters:
-        Handler: 'userpool.handler'
-        Runtime: 'nodejs8.10'
-        Timeout: '30'
-        ManagedPolicyArns: !Ref DomainPolicy
-      TemplateURL: './node_modules/@cfn-modules/lambda-function/module.yml'
-  Domain: # deprecated, will be removed with the next major version
-    Type: 'Custom::UserPoolDomain'
-    Version: '1.0'
-    Properties:
-      UserPoolId: !Ref UserPool
-      ServiceToken: !GetAtt 'DomainFunction.Outputs.Arn'
   UserPoolDomain:
     Type: 'AWS::Cognito::UserPoolDomain'
     Properties:
@@ -101,11 +75,7 @@ Outputs:
     Value: !Ref UserPool
     Export:
       Name: !Sub '${AWS::StackName}-Id'
-  Domain: # deprecated, will be removed with the next major version
-    Value: !Ref Domain
-    Export:
-      Name: !Sub '${AWS::StackName}-Domain'
-  UserPoolDomain:
+  Domain:
     Value: !Ref UserPoolDomain
     Export:
-      Name: !Sub '${AWS::StackName}-UserPoolDomain'
+      Name: !Sub '${AWS::StackName}-Domain'
