--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Cognito User Pool",
   "author": "Andreas Wittig <andreas@widdix.de>",
   "license": "Apache-2.0",
-  "bundledDependencies": ["@cfn-modules/lambda-function"],
-  "keywords": ["cfn-modules", "cfn-modules:ExposeArn", "cfn-modules:ExposeId"],
+  "keywords": [
+    "cfn-modules",
+    "cfn-modules:ExposeArn",
+    "cfn-modules:ExposeId"
+  ],
   "homepage": "https://github.com/cfn-modules",
   "bugs": {
     "url": "https://github.com/cfn-modules/cognito-userpool/issues"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/cfn-modules/cognito-userpool.git"
+    "type": "git",
+    "url": "https://github.com/cfn-modules/cognito-userpool.git"
   }
 }
